--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MOOC-grader\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-20 15:17+0000\n"
+"POT-Creation-Date: 2021-08-25 14:03+0000\n"
 "PO-Revision-Date: 2019-10-12 20:00+0300\n"
-"Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
+"Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
@@ -121,9 +121,9 @@ msgstr ""
 msgid "SUBMISSION_IN_GRADING_NOW"
 msgstr ""
 "Palautuksesi on arvosteltavana. Tulos on mahdollista nähdä tällä sivulla, "
-"kun arvosteluprosessi on suoritettu loppuun. Huomioi, että arvostelu voi "
-"kestää useita kymmeniä sekunteja. Voit lisäksi joutua lataamaan tämän sivun "
-"uudestaan nähdäksesi palautteen. Tämän viestin voi sulkea."
+"kun arvosteluprosessi on suoritettu loppuun. Huomaa, että arvostelu voi "
+"kestää useita kymmeniä sekunteja. Saatat joutua lataamaan tämän sivun "
+"uudelleen nähdäksesi palautteen. Tämän viestin voi sulkea."
 
 #: access/templates/access/async_accepted.html
 #, python-format
@@ -186,11 +186,11 @@ msgstr ""
 msgid "WARNING_FEEDBACK_DID_NOT_ACCESS_RESULT"
 msgstr ""
 "<p>\n"
-"Palaute-template ei käyttänyt <code>result</code>-dictiä, joten alla oleva "
-"palaute luultavasti puuttuu tai on puutteellinen. Templaten tulisi käyttää "
-"lukea ainakin <code>points</code>, <code>max_points</code>, <code>error</"
-"code> tai <code>out</code>. Ole hyvä ja tarkista tehtävän YAML-tiedostossa "
-"määritelty <code>feedback_template</code>\n"
+"Palautepohja ei käyttänyt <code>result</code>-dictiä, joten alla oleva "
+"palaute luultavasti puuttuu tai on puutteellinen. Pohjan tulisi käyttää "
+"ainakin yhtä arvoista <code>points</code>, <code>max_points</code>, "
+"<code>error</code> tai <code>out</code>. Ole hyvä ja tarkista tehtävän YAML-"
+"tiedostossa määritelty <code>feedback_template</code>.\n"
 "</p>\n"
 "<p>\n"
 "Jos olet opiskelija, ole hyvä ja kerro kurssihenkilökunnalle mitä olit "
@@ -244,7 +244,7 @@ msgstr "Lataa"
 
 #: access/templates/access/ready.html
 msgid "GRADER_READY"
-msgstr "Arvostelija on valmiina"
+msgstr "Tarkistin on valmiina"
 
 #: access/templates/access/ready.html
 msgid "GIT_MANAGER"
